Fix position of login/register panels and moved registration text to make more visible

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,6 @@
 body {
     background: url('../images/medical-center.jpg') no-repeat center center fixed;
     background-size: cover;
-    color: #000000;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -15,7 +14,7 @@ body {
 }
 
 .nav-wrapper {
-    margin-bottom: 90px;
+    margin-bottom: 20px;
 }
 
 .hide-on-med-and-down {
@@ -32,7 +31,7 @@ body {
 }
 
 .card-panel {
-    margin-top: 50px;
+    margin-top: 30px;
     background-color: rgba(255, 255, 255, 0.9);
 }
 
@@ -41,6 +40,7 @@ a.brand-logo {
     padding-right: 20px;
     position: relative;
     text-align: center;
+    font-size:large;
 }
 
 .container {
@@ -84,10 +84,8 @@ a.brand-logo {
 }   
 
 .center-align {
-    font-size: x-large;
+    font-size: large;
     padding-bottom: 10px;
-    
-    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .input-field {
